[tool.poetry]
name = "neet-code"
version = "0.1.0"
description = ""
authors = ["williamfoschiera <william.foschiera@buser.com.br>"]
readme = "README.md"
packages = [{include = "neet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.1.14"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
